k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chattingo-backend
  namespace: chattingo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chattingo-backend
  template:
    metadata:
      labels:
        app: chattingo-backend
    spec:
      containers:
      - name: backend
        image: shazil91ali/chattingo-chattingo_backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
