k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chattingo-frontend
  namespace: chattingo
  labels:
    app: chattingo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chattingo-frontend
  template:
    metadata:
      labels:
        app: chattingo-frontend
    spec:
      containers:
        - name: chattingo-frontend
          image: shazil91ali/chattingo-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
