k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chattingo-backend
  namespace: chattingo
spec:
  type: NodePort
  selector:
    app: chattingo-backend
  ports:
    - port: 8080
      targetPort: 8080
