k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chattingo-frontend
  namespace: chattingo
spec:
  type: NodePort
  selector:
    app: chattingo-frontend
  ports:
    - port: 80
      targetPort: 80
