k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chattingo-mysql
  namespace: chattingo
spec:
  selector:
    app: chattingo-mysql
  ports:
    - port: 3306
      targetPort: 3306
