k8s/chattingo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chattingo-ingress
  namespace: chattingo
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chattingo-frontend
            port:
              number: 80
